[tool.poetry]
name = "chatagent"
version = "0.1.0"
description = ""
authors = ["Umpire2018 <138990495+Umpire2018@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyautogen = "^0.2.27"
llama-index = "^0.10.35"
llama-index-llms-litellm = "^0.1.4"
dynaconf = "^3.2.5"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
